# patientflow

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE  LICENSE.md  MANIFEST.in  README.md  config.yaml  environment.yml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
LICENSE/: index.html
api/: index.html
data-dictionaries/: arrivals_data_dictionary.csv  arrivals_data_dictionary.md  ed_visits_data_dictionary.csv  ed_visits_data_dictionary.md  inpatient_arrivals_data_dictionary.csv  inpatient_arrivals_data_dictionary.md  uclh_arrivals_data_dictionary.csv  uclh_arrivals_data_dictionary.md  uclh_visits_data_dictionary.csv  uclh_visits_data_dictionary.md  visits_data_dictionary.csv  visits_data_dictionary.md
data-synthetic/: arrivals_syn_v1.csv  inpatient_arrivals.csv
docs/: api.md
functions/: ed_admissions_data_retrieval.py  ed_admissions_helper_functions.py  ed_admissions_machine_learning.py  ed_admissions_realtime_preds.py  ed_admissions_utils.py  ed_specialty_paediatric_functions.py  load_config.py  load_data_utils.py  plot_data.py  plot_pipeline.py
notebooks/: 0_Set_up_your_environment.ipynb  1 Introducing our users.ipynb  1 Introduction.ipynb  10 Modelling using minimal data to show true demand.ipynb  10 Modelling using only OPEL data.ipynb  11 Using the trained models for inference.ipynb  12 Plot the whole pipeiline for one prediction moment.ipynb  12 Plot the whole pipeline for one prediction moment.ipynb  13 Example showing supply and demand.ipynb  1_Introduce_our_users.ipynb  1_Meet_the_users_of_our_predictions.ipynb  2 Introducing emergency demand and its modelling.ipynb  2 Understanding our users.ipynb  2_Consider_what_makes_a_useful_model_for_our_users.ipynb  2_Modelling_requirements.ipynb  2_Specify_emergency_demand_model.ipynb  2a_About_snapshots.ipynb  2a_Create_patient_snapshots.ipynb  2b_Create_cohort_snapshots.ipynb  2b_Create_group_snapshots.ipynb  2b_Predict_using_patient_snapshots.ipynb  2c_Evaluate_patient_snapshot_models.ipynb  2d_Explore_the_datasets_provided.ipynb  3 Introducing the datasets.ipynb  3_Introduce_the_datasets.ipynb  3a_Create_group_snapshots.ipynb  3a_Set_up_your_environment.ipynb  3b_Explore_the_datasets.ipynb  3b_Introduce_the_datasets.ipynb  3c_Convert_your_EHR_data_to_snapshots.ipynb  4 Modelling the probability of admission from ED.ipynb  4_Specify_emergency_demand_model.ipynb  4a_Predict_probability_of_admission_from_ED.ipynb  4b_Predict_demand_from_patients_in_ED.ipynb  4c_Predict_probability_of_admission_to_specialty.ipynb  4d_Predict_demand_from_patients_yet_to_arrive.ipynb  4e_Predict_probabiity_of_admission_using_minimal_data.ipynb  4f_Bring_it_all_together.ipynb  5 Turning individual probabilities into bed counts.ipynb  5_Evaluate_model_performance.ipynb  (+16 more)
patientflow/: README.md
search/: search_index.json
(+99 files in other folders)
